# LogstashAgent

./: .dockerignore  .gitignore  CHANGELOG.md  NOTICE.txt  logstash-agent.spec  pyproject.toml
.github/workflows/: docker-image.yml  release.yml  test-docker-image.yml
docker/: docker-compose.yml  entrypoint.sh
docker/config/: logstash.yml  pipelines.yml
scripts/: add_license_headers.py  generate_notice.py
src/logstashagent/: __init__.py  agent_state.py  controller.py  encryption.py  installer.py  logstash_supervisor.py  main.py
src/logstashagent/config/: logstashagent.example.yml  logstashagent.yml
src/logstashagent/ls_keystore_utils/: __init__.py  settings.py
tests/: test_agent_state.py  test_controller.py  test_encryption.py  test_installer.py  test_logstash_supervisor.py  test_main.py
